force-app/main/default/objects/NCR__c/NCR__c.object-meta.xml
<CustomObject>
    <label>Non-Conformance Report</label>
    <nameField>
        <label>Non-Conformance Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non-Conformance Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>