force-app/main/default/objects/NCR__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user assigned to resolve this issue.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Non_Conformance_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>