force-app/main/default/objects/NCR__c/fields/Description_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issue__c</fullName>
    <inlineHelpText>Enter a detailed description of the issue found during the inspection.</inlineHelpText>
    <label>Description of Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>