force-app/main/default/objects/NCR__c/fields/NCR_ID__c.field-meta.xml
<CustomField>
    <fullName>NCR_ID__c</fullName>
    <displayFormat>NCR-{0000}</displayFormat>
    <inlineHelpText>Automatically generated unique identifier for each Non-Conformance Report.</inlineHelpText>
    <label>NCR ID</label>
    <type>AutoNumber</type>
</CustomField>