force-app/main/default/objects/NCR__c/fields/Related_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Related_Inspection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the product inspection that this Non-Conformance Report is related to.</inlineHelpText>
    <label>Related Inspection</label>
    <referenceTo>Product_Inspection__c</referenceTo>
    <relationshipLabel>Non-Conformance Reports</relationshipLabel>
    <relationshipName>Non_Conformance_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>